[package]
name = "leetcode_problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_0001"
harness = false

[[bench]]
name = "bench_0033"
harness = false

[[bench]]
name = "bench_0036"
harness = false

[[bench]]
name = "bench_0062"
harness = false

[[bench]]
name = "bench_0076"
harness = false

[[bench]]
name = "bench_0091"
harness = false

[[bench]]
name = "bench_0322"
harness = false

[[bench]]
name = "bench_1143"
harness = false
